# FINDY-APP

./: .gitignore  FINDY.py  FINDY324.py  FINDY_2.py  FINDY_artist.py  FINDY_customer.py  README.md  main.py  pyproject.toml  requirements.txt  reservation_history.json  smoke_test.py
FINDY 백업/: FINDY324.py  FINDY324_route_block.txt  FINDY324_web.py  reservation_history.json  smoke_test.py
assets/: BRAND_GUIDE.md
auth_gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  check_config.py  compose.yaml  requirements.txt  run_local.sh
components/: cards.py  layout.py  overlays.py
core/: findy2_config.py  findy2_public_config.json  findy2_state.py
data/: beauty_mood_keywords.py  categories.py  community_safety.py  findy2_content.py  legal_content.py  review_safety.py
docs/: README.md
findy_server/: .env.example  README.md  __init__.py  config.py  database.py  dependencies.py  main.py  requirements.txt  run_local.sh  schemas.py
md/: QA_CHECKLIST.md  README.md
pages/: common.py  detail_page.py  feedback_page.py  home_page.py  inquiry_page.py  login_page.py  my_page.py  opening_page.py  reservation_confirm_page.py  reservation_history_page.py  reservation_page.py  support_page.py
python_files/: FINDY.py  FINDY2.py  __init__.py  generate_placeholders.py  smoke_test.py  test_findy2_services.py
scripts/: build_findy2.sh  generate_release_assets.py
services/: artist_service.py  findy2_api_client.py  findy2_auth.py  findy2_media_storage.py  findy2_phone_auth.py  findy2_points.py  findy2_social_auth.py  findy2_user_storage.py  (+2 more)
(+117 files in other folders)
